k8s/argocd/argocd-ingress.yaml
# argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
    # All HTTPS-related annotations are commented out
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # cert-manager.io/cluster-issuer: letsencrypt
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  # TLS section is commented out
  # tls:
  # - hosts:
  #   - argocd.bunny970077.com
  #   secretName: argocd-joel-cloud-tls
  rules:
    - host: aad910c5a054a4773bd7a8330ee35421-6fd9ff86ae2ae1eb.elb.ap-southeast-2.amazonaws.com.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80  # Using HTTP port instead of HTTPS
